# todo-api

./: .gitignore  pyproject.toml  requirements.txt
django_project/: settings.py
todos/: tests.py
todos/fixtures/: todos.yaml
todos/migrations/: 0001_initial.py
