[project]
name = "todo-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marco", email = "m_uno_p@hotmail.com"},
]
dependencies = ["django>=5.1.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
